--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -295,6 +295,7 @@
         height       : 100%;
         border-radius: 20px;
         margin       : auto;
+        opacity      : 1;
     }
 
     .menusCardName {
@@ -304,9 +305,8 @@
     }
 
     .menusCardContent {
-        color : white;
-        margin: auto;
-
+        color     : white;
+        margin    : auto;
         text-align: center;
 
     }
@@ -358,8 +358,7 @@
     .menusContainer {
         padding-left : 10px;
         padding-right: 10px;
-
-        margin-top: 80px;
+        margin-top   : 80px;
     }
 
     .menuTitleContainer {
@@ -385,7 +384,7 @@
     .menusItemContainer {
         display        : flex;
         justify-content: space-around;
-        width          : 100%;
+        width          : 97%;
         margin         : auto;
         padding-right  : 10px;
         padding-top    : 50px;
@@ -394,14 +393,12 @@
     .menusItem {
         display         : flex;
         background-color: transparent;
-        width           : 17%;
+        width           : 13%;
         justify-content : center;
         align-items     : center;
         border-radius   : 20px;
         text-align      : center;
         margin-bottom   : 30px;
-
-
     }
 
     .menusItemImage {
@@ -459,6 +456,8 @@
         margin-left  : 0px;
         position     : relative;
         height       : 260px;
+        overflow     : hidden;
+
     }
 
     .menusCardImage {
@@ -467,6 +466,7 @@
         width        : 90%;
         height       : 100%;
         border-radius: 20px;
+        opacity      : 1;
     }
 
     .menusCardName {
@@ -481,12 +481,12 @@
     }
 
     .menusCardContent {
-        color     : white;
-        text-align: center;
-        width     : 90%;
-        margin    : auto;
-        position  : relative;
-        font-size : 16px;
+        color        : white;
+        text-align   : center;
+        width        : 90%;
+        margin       : auto;
+        position     : relative;
+        font-size    : 16px;
         margin-bottom: 10px;
 
     }
@@ -520,7 +520,7 @@
     .selectedMenu {
         display         : flex;
         background-color: var(--primary-color);
-        width           : 17%;
+        width           : 13%;
         justify-content : center;
         align-items     : center;
         border-radius   : 15px;
@@ -568,7 +568,7 @@
     .menusItemContainer {
         display        : flex;
         justify-content: space-around;
-        width          : 100%;
+        width          : 97%;
         margin         : auto;
         padding-right  : 10px;
         padding-top    : 50px;
@@ -577,14 +577,12 @@
     .menusItem {
         display         : flex;
         background-color: transparent;
-        width           : 17%;
+        width           : 13%;
         justify-content : center;
         align-items     : center;
         border-radius   : 20px;
         text-align      : center;
         margin-bottom   : 30px;
-
-
     }
 
     .menusItemImage {
@@ -643,6 +641,7 @@
         margin-left  : 0px;
         position     : relative;
         height       : 320px;
+        overflow     : hidden;
     }
 
     .menusCardImage {
@@ -663,12 +662,12 @@
     }
 
     .menusCardContent {
-        color     : white;
-        text-align: center;
-        width     : 90%;
-        margin    : auto;
-        position  : relative;
-        font-size : 16px;
+        color        : white;
+        text-align   : center;
+        width        : 90%;
+        margin       : auto;
+        position     : relative;
+        font-size    : 16px;
         margin-bottom: 10px;
 
     }
@@ -701,10 +700,11 @@
 
     }
 
+
     .selectedMenu {
         display         : flex;
         background-color: var(--primary-color);
-        width           : 17%;
+        width           : 13%;
         justify-content : center;
         align-items     : center;
         border-radius   : 15px;
