--- a/src/css/location.css
+++ b/src/css/location.css
@@ -29,10 +29,11 @@
         padding-bottom : 90px;
         align-items    : center;
         padding-left   : 35px;
+        margin-top     : 20px;
     }
 
     .mapContainer {
-        margin-right: 30px;
+        margin-right : 30px;
         margin-bottom: 20px;
     }
 
@@ -92,6 +93,7 @@
         padding-bottom : 90px;
         align-items    : center;
         padding-left   : 35px;
+        margin-top     : 20px;
     }
 
     .mapContainer {
@@ -149,10 +151,15 @@
 
 @media only screen and (min-width : 1200px) {
     .locationContainer {
-        display        : flex;
-        justify-content: center;
-        padding-bottom : 90px;
-        align-items    : center;
+        display            : flex;
+        justify-content    : center;
+        padding-bottom     : 90px;
+        align-items        : center;
+        margin-top         : 20px;
+        background-image   : url("../assets/mapbg.png");
+        background-repeat  : no-repeat;
+        background-size    : 17%;
+        background-position: right;
     }
 
     .mapContainer {
@@ -210,10 +217,15 @@
 
 @media only screen and (min-width : 1600px) {
     .locationContainer {
-        display        : flex;
-        justify-content: center;
-        padding-bottom : 90px;
-        align-items    : center;
+        display            : flex;
+        justify-content    : center;
+        padding-bottom     : 90px;
+        align-items        : center;
+        margin-top         : 20px;
+        background-image   : url("../assets/mapbg.png");
+        background-repeat  : no-repeat;
+        background-size    : 17%;
+        background-position: right;
     }
 
     .mapContainer {
