--- a/src/css/header.css
+++ b/src/css/header.css
@@ -6,7 +6,7 @@
 
 * {
     padding: 0;
-    margin : 0;
+    margin: 0;
 }
 
 /* Responsive  */
@@ -17,11 +17,11 @@
 
 @media only screen and (min-width : 200px) {
     .headerContainer {
-        display        : flex;
+        display: flex;
         justify-content: space-between;
-        align-items    : center;
-        padding-top    : 10px;
-        padding-bottom : 10px;
+        align-items: center;
+        padding-top: 10px;
+        padding-bottom: 10px;
     }
 
     .logoContainer {
@@ -29,7 +29,7 @@
     }
 
     .logo {
-        width : 131px;
+        width: 131px;
         height: 57px;
         cursor: pointer;
     }
@@ -39,22 +39,22 @@
     }
 
     .menu {
-        display        : flex;
+        display: flex;
         list-style-type: none;
     }
 
     .menuShow {
-        display         : block;
-        position        : absolute;
-        z-index         : 99999;
-        top             : 80px;
-        left            : 10px;
-        right           : 20px;
+        display: block;
+        position: absolute;
+        z-index: 99999;
+        top: 80px;
+        left: 10px;
+        right: 20px;
         background-color: #fff;
-        width           : 88;
-        padding-left    : 20px;
-        box-shadow      : 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-        transition      : 0.3s;
+        width: 88;
+        padding-left: 20px;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        transition: 0.3s;
     }
 
     .menuHide {
@@ -62,15 +62,15 @@
     }
 
     .menuItem {
-        margin-right : 40px;
-        font-size    : 14px;
-        font-weight  : 500;
-        font-family  : Poppins;
+        margin-right: 40px;
+        font-size: 14px;
+        font-weight: 500;
+        font-family: Poppins;
         margin-bottom: 10px;
     }
 
     .menuItem:hover {
-        color : var(--primary-color);
+        color: var(--primary-color);
         cursor: pointer;
     }
 
@@ -79,11 +79,11 @@
     }
 
     .menuToggleLine {
-        width           : 20px;
-        height          : 4px;
+        width: 20px;
+        height: 4px;
         background-color: var(--primary-color);
-        margin-bottom   : 5px;
-        border-radius   : 20px;
+        margin-bottom: 5px;
+        border-radius: 20px;
     }
 }
 
@@ -91,11 +91,11 @@
 
 @media only screen and (min-width : 320px) {
     .headerContainer {
-        display        : flex;
+        display: flex;
         justify-content: space-between;
-        align-items    : center;
-        padding-top    : 15px;
-        padding-bottom : 15px;
+        align-items: center;
+        padding-top: 15px;
+        padding-bottom: 15px;
     }
 
     .logoContainer {
@@ -103,7 +103,7 @@
     }
 
     .logo {
-        width : 131px;
+        width: 131px;
         height: 57px;
         cursor: pointer;
     }
@@ -113,21 +113,21 @@
     }
 
     .menu {
-        display        : flex;
+        display: flex;
         list-style-type: none;
     }
 
     .menuShow {
-        display         : block;
-        position        : absolute;
-        top             : 80px;
-        left            : 10px;
-        right           : 20px;
+        display: block;
+        position: absolute;
+        top: 80px;
+        left: 10px;
+        right: 20px;
         background-color: #fff;
-        width           : 88;
-        padding-left    : 20px;
-        box-shadow      : 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-        transition      : 0.3s;
+        width: 88;
+        padding-left: 20px;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        transition: 0.3s;
     }
 
     .menuHide {
@@ -135,15 +135,15 @@
     }
 
     .menuItem {
-        margin-right : 40px;
-        font-size    : 14px;
-        font-weight  : 500;
-        font-family  : Poppins;
+        margin-right: 40px;
+        font-size: 14px;
+        font-weight: 500;
+        font-family: Poppins;
         margin-bottom: 10px;
     }
 
     .menuItem:hover {
-        color : var(--primary-color);
+        color: var(--primary-color);
         cursor: pointer;
     }
 
@@ -152,11 +152,11 @@
     }
 
     .menuToggleLine {
-        width           : 20px;
-        height          : 4px;
+        width: 20px;
+        height: 4px;
         background-color: var(--primary-color);
-        margin-bottom   : 5px;
-        border-radius   : 20px;
+        margin-bottom: 5px;
+        border-radius: 20px;
     }
 }
 
@@ -164,11 +164,11 @@
 
 @media only screen and (min-width : 768px) {
     .headerContainer {
-        display        : flex;
+        display: flex;
         justify-content: space-between;
-        align-items    : center;
-        padding-top    : 10px;
-        padding-bottom : 10px;
+        align-items: center;
+        padding-top: 10px;
+        padding-bottom: 10px;
     }
 
     .logoContainer {
@@ -176,7 +176,7 @@
     }
 
     .logo {
-        width : 131px;
+        width: 131px;
         height: 57px;
         cursor: pointer;
     }
@@ -186,19 +186,19 @@
     }
 
     .menu {
-        display        : flex;
+        display: flex;
         list-style-type: none;
     }
 
     .menuItem {
         margin-right: 40px;
-        font-size   : 17px;
-        font-weight : 500;
-        font-family : Poppins;
+        font-size: 17px;
+        font-weight: 500;
+        font-family: Poppins;
     }
 
     .menuItem:hover {
-        color : var(--primary-color);
+        color: var(--primary-color);
         cursor: pointer;
     }
 
@@ -211,11 +211,11 @@
 
 @media only screen and (min-width : 1200px) {
     .headerContainer {
-        display        : flex;
+        display: flex;
         justify-content: space-between;
-        align-items    : center;
-        padding-top    : 10px;
-        padding-bottom : 10px;
+        align-items: center;
+        padding-top: 10px;
+        padding-bottom: 10px;
     }
 
     .logoContainer {
@@ -223,7 +223,7 @@
     }
 
     .logo {
-        width : 131px;
+        width: 131px;
         height: 57px;
         cursor: pointer;
     }
@@ -233,36 +233,44 @@
     }
 
     .menu {
-        display        : flex;
+        display: flex;
         list-style-type: none;
     }
 
     .menuItem {
         margin-right: 40px;
-        font-size   : 17px;
-        font-weight : 500;
-        font-family : Poppins;
+        font-size: 17px;
+        font-weight: 500;
+        font-family: Poppins;
+        text-decoration-line: none;
+        color: black !important;
     }
 
     .menuItem:hover {
-        color : var(--primary-color);
+        color: var(--primary-color);
         cursor: pointer;
     }
 
     .menuToggle {
         display: none;
     }
+
+    a {
+        text-decoration-line: none;
+        color: black !important;
+    }
+
 }
 
 /* Desktop  */
 
 @media only screen and (min-width : 1600px) {
     .headerContainer {
-        display        : flex;
+        display: flex;
         justify-content: space-between;
-        align-items    : center;
-        padding-top    : 10px;
-        padding-bottom : 10px;
+        align-items: center;
+        padding-top: 10px;
+        padding-bottom: 10px;
     }
 
     .logoContainer {
@@ -270,7 +278,7 @@
     }
 
     .logo {
-        width : 131px;
+        width: 131px;
         height: 57px;
         cursor: pointer;
     }
@@ -280,23 +288,28 @@
     }
 
     .menu {
-        display        : flex;
+        display: flex;
         list-style-type: none;
     }
 
     .menuItem {
         margin-right: 40px;
-        font-size   : 17px;
-        font-weight : 500;
-        font-family : Poppins;
+        font-size: 17px;
+        font-weight: 500;
+        font-family: Poppins;
     }
 
     .menuItem:hover {
-        color : var(--primary-color);
+        color: var(--primary-color);
         cursor: pointer;
     }
 
     .menuToggle {
         display: none;
+    }
+
+    a {
+        text-decoration-line: none;
+        color: black !important;
     }
 }
